--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -4,21 +4,20 @@
 
     <item
         android:title="Find friends"
-        android:id="main_find_friends_option"
+        android:id="@+id/main_find_friends_option"
         app:showAsAction="never">
 
     </item>
 
     <item
         android:title="Settings"
-        android:id="main_find_Settings_option"
+        android:id="@+id/main_find_Settings_option"
         app:showAsAction="never">
 
     </item>
     <item
         android:title="Logout"
-        android:id="main_find_Logout_option"
+        android:id="@+id/main_find_Logout_option"
         app:showAsAction="never">
-
     </item>
 </menu>
