--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -3,6 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:title="Create group"
+        android:id="@+id/main_find_create_option"
+        app:showAsAction="never">
+    </item>
+    <item
         android:title="Find friends"
         android:id="@+id/main_find_friends_option"
         app:showAsAction="never">
