--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -23,6 +23,7 @@
         android:id="@+id/set_user_name"
         android:hint="Username"
         android:textAlignment="center"
+        android:background="@color/white"
         android:textColor="@color/colorPrimaryDark"
         android:layout_below="@id/set_profile_image"
         android:textStyle="bold"
@@ -43,6 +44,7 @@
         android:textColor="@color/colorPrimaryDark"
         android:layout_below="@id/set_user_name"
         android:textStyle="bold"
+        android:background="@color/white"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:padding="6dp"
