added data on chat & contacts component

--- a/app/src/main/res/layout/activity_find_freinds.xml
+++ b/app/src/main/res/layout/activity_find_freinds.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".Chat.Find_freindsActivity">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/mrecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </android.support.v7.widget.RecyclerView>
 </android.support.constraint.ConstraintLayout>
