fixing reset PasswordActivity bugs

--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".Auth.ResetPasswordActivity">
 
     <LinearLayout
@@ -13,48 +14,52 @@
         android:gravity="center"
         android:orientation="vertical">
 
+        <ImageView
+            android:layout_marginTop="14dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dp"
+            android:src="@drawable/logo1" />
+
         <TextView
-            android:layout_marginTop="22dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:padding="10dp"
             android:text="@string/lbl_forgot_password"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             android:textSize="20dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="20dp"
             android:gravity="center_horizontal"
             android:text="@string/forgot_password_msg"
-            android:textColor="@android:color/black"
-            android:textSize="14dp" />
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:textColor="@android:color/white"
+            android:textSize="17dp" />
 
             <EditText
                 android:id="@+id/res_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                android:padding="10dp"
                 android:layout_marginTop="20dp"
                 android:hint="@string/hint_email"
                 android:inputType="textEmailAddress"
-                android:textColorHint="@android:color/black"/>
-        </android.support.design.widget.TextInputLayout>
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white" />
 
-        <!-- Reset Button -->
+        <!-- Login Button -->
 
         <Button
-            android:id="@+id/res-btn_reset_password"
+            android:id="@+id/btn_reset_password"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dip"
-            android:background="@color/btn_login_bg"
+            android:background="@drawable/background_button"
             android:text="@string/btn_reset_password"
             android:textColor="@android:color/black" />
 
@@ -65,7 +70,7 @@
             android:layout_marginTop="10dp"
             android:background="@null"
             android:text="@string/btn_back"
-            android:textColor="@color/colorAccent" />
+            android:textColor="@color/white" />
 
     </LinearLayout>
 
@@ -76,4 +81,4 @@
         android:layout_gravity="center|bottom"
         android:layout_marginBottom="20dp"
         android:visibility="gone" />
-</android.support.constraint.ConstraintLayout>
+</android.support.design.widget.CoordinatorLayout>
