--- a/app/src/main/res/layout/find_friends.xml
+++ b/app/src/main/res/layout/find_friends.xml
@@ -27,7 +27,7 @@
                android:orientation="horizontal">
 
                <TextView
-                   android:id="@+id/user_profile_name"
+                   android:id="@+id/muser_profile_name"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:text="User Name"
@@ -35,18 +35,18 @@
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />
-               <ImageView
-                   android:layout_width="18dp"
-                   android:layout_height="18dp"
-                   android:id="@+id/user_online_status"
-                   android:layout_marginTop="5dp"
-                   android:src="@drawable/baseline_radio_button_unchecked_black_18"
-                   android:visibility="invisible"/>
+               <!--<ImageView-->
+                   <!--android:layout_width="18dp"-->
+                   <!--android:layout_height="18dp"-->
+                   <!--android:id="@+id/user_online_status"-->
+                   <!--android:layout_marginTop="5dp"-->
+                   <!--android:src="@drawable/baseline_radio_button_unchecked_black_18"-->
+                   <!--android:visibility="invisible"/>-->
 
            </LinearLayout>
 
            <TextView
-               android:id="@+id/user_profile_status"
+               android:id="@+id/muser_profile_status"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="User Status"
