--- a/app/src/main/res/layout/activity_message_chat.xml
+++ b/app/src/main/res/layout/activity_message_chat.xml
@@ -7,8 +7,8 @@
     tools:context=".Chat.MessageChatActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/send_private_message"
-        android:layout_width="match_parentt"
+        android:id="@+id/recyclerView_send_private_message"
+        android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     </android.support.v7.widget.RecyclerView>
