--- a/app/src/main/res/layout/messages_layout.xml
+++ b/app/src/main/res/layout/messages_layout.xml
@@ -12,7 +12,7 @@
         android:src="@drawable/user"
         />
     <TextView
-        android:id="@+id/receiver_text"
+        android:id="@+id/mesreceiver_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -25,7 +25,7 @@
         android:textStyle="bold"/>
 
     <TextView
-        android:id="@+id/sender_text"
+        android:id="@+id/messender_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
