styling massage layout

--- a/app/src/main/res/layout/messages_layout.xml
+++ b/app/src/main/res/layout/messages_layout.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="13dp"
+        android:layout_marginLeft="8dp"
         android:layout_toEndOf="@+id/message_profile_image"
         android:text="receiver message"
         android:background="@drawable/receiver_layout"
@@ -30,9 +30,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="47dp"
+        android:layout_marginRight="11dp"
         android:layout_marginTop="10dp"
-        android:layout_alignParentTop="@+id/receiver_text"
+        android:padding="10dp"
+        android:layout_alignParentTop="@+id/mesreceiver_text"
         android:background="@drawable/sender_messages"
         android:text="Sender"
         android:textSize="16sp"
