--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -8,7 +8,7 @@
         app:showAsAction="never">
     </item>
     <item
-        android:title="Find friends"
+        android:title="View Groups"
         android:id="@+id/main_find_friends_option"
         app:showAsAction="never">
 
